# Symphony

./: .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc  BUILD.md  CLASS_DIAGRAM.md  COMMANDS_REFACTORING_SUMMARY.md  CONNECTION.md  CONVERSATION2.md  Cargo.toml  ERD.md  FILE_EXPLORER_REFACTORING_SUMMARY.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  OUTLINEVIEW_REFACTORING_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SEQUENCE_DIAGRAM.md  SETTINGS_REFACTORING_SUMMARY.md  STATE_DIAGRAM.md  USE_CASE_DIAGRAM.md  activity_diagram_extension_development.html  activity_diagram_extension_lifecycle.html  activity_diagram_harmony_board_creation.html  activity_diagram_melody_execution.html  activity_diagram_system_bootstrap.html  build-windows.bat  dfd_symphony_context.html  dfd_symphony_level2_process3.html  dfd_symphony_level2_process4.html  dfd_symphony_level2_process5.html  dfd_symphony_level2_process7.html  dfd_symphony_level2_process8.html  dfd_symphony_showcase.html  eslint.config.js  install_build.py  jakefile.js  jest.config.js  members.md  (+12 more)
apps/backend/: .editorconfig  .gitattributes  ARCHITECTURE.md  Cargo.toml  FINAL_VERIFICATION.md  IMPLEMENTATION_PROGRESS.md  Makefile.toml  README.md  STATUS_REPORT.md  TESTS_STATUS.md  clippy.toml  deny.toml  migrate_xi.py  nextest.toml  rust-toolchain.toml  rustfmt.toml  test.ps1
apps/backend/.cargo/: config.toml
apps/backend/.github/workflows/: ci.yml
apps/backend/bootstrap/core/: Cargo.toml  README.md
apps/backend/bootstrap/health_checker/: Cargo.toml  README.md
apps/backend/bootstrap/phase_manager/: Cargo.toml  README.md
apps/backend/conductor/bindings/: Cargo.toml  README.md
apps/backend/conductor/extension_proxy/: Cargo.toml  README.md
apps/backend/conductor/orchestration_bridge/: Cargo.toml  README.md
apps/backend/config/: Cargo.toml  README.md
apps/backend/config/src/: lib.rs  loader.rs  merger.rs  schema.rs  watcher.rs
apps/backend/core/: Cargo.toml  README.md
apps/backend/core/examples/: http.rs
apps/backend/core/src/: configuration.rs  lib.rs  server.rs
apps/backend/core_api/: Cargo.toml  README.md
apps/backend/core_api/src/: language_servers.rs  lib.rs  terminal_shells.rs
apps/backend/core_api/tests/: extension_settings.rs  manifests.rs  terminal_shells.rs
apps/backend/core_deno/: Cargo.toml  readme.md
apps/backend/core_deno/src/: graviton.ts  main_worker.rs
apps/backend/core_deno/tests/: statusbar_items.rs
apps/backend/crates/sy-ipc-bus/: ALIGNMENT.md  Cargo.toml
apps/backend/crates/sy-ipc-protocol/: ALIGNMENT.md  Cargo.toml
apps/backend/crates/sy-ipc-transport/: Cargo.toml
apps/backend/crates/sy-xi-adapter/: Cargo.toml
apps/backend/crates/symphony-core-ports/: ALIGNMENT.md  Cargo.toml
apps/backend/crosspty/: ASYNC_PTY_ANALYSIS.md  Cargo.toml  README.md
apps/backend/crosspty/examples/: basic_terminal.rs  interactive_shell.rs  process_lifecycle.rs
apps/backend/crosspty/src/: async_pty.rs  error.rs  lib.rs
apps/backend/crosspty/tests/: integration_tests.rs  test.rs
apps/backend/desktop/: Cargo.toml  README.md
apps/backend/desktop/src/: lib.rs
apps/backend/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/backend/developed_extensions/: README.md  package.json  test-all.js  test-extensions.js
apps/backend/developed_extensions/command-palette/: extension.toml
apps/backend/developed_extensions/file-counter/: extension.toml  index.js
apps/backend/developed_extensions/git/: Cargo.toml
apps/backend/developed_extensions/hello-world/: extension.toml  index.js
apps/backend/developed_extensions/lsp-manager/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
apps/backend/developed_extensions/native-shell/: CHANGELOG.md  Cargo.toml  MIGRATION_REPORT.md  README.md  build.ps1
apps/backend/developed_extensions/typescript-lsp/: Cargo.toml
apps/backend/extensions/git/: Cargo.toml  readme.md
apps/backend/extensions/native-shell/: Cargo.toml
apps/backend/extensions/typescript-lsp/: readme.md
apps/backend/hooks/: Cargo.toml  README.md
apps/backend/hooks/src/: lib.rs
apps/backend/ipc_bus/: Cargo.toml  README.md
apps/backend/ipc_bus/protocol/: Cargo.toml  README.md
apps/backend/ipc_bus/security/: Cargo.toml  README.md
apps/backend/ipc_bus/src/: lib.rs
apps/backend/ipc_bus/transport/: Cargo.toml  README.md
apps/backend/kit/core/: Cargo.toml  README.md
apps/backend/kit/harmony_board/: Cargo.toml  README.md
apps/backend/kit/installer/: Cargo.toml  README.md
apps/backend/kit/instruments/: Cargo.toml  (+1 more)
apps/backend/logging/: .env.example  .gitignore  CLEAN_CODE_IMPROVEMENTS.md  COMPLETE_IMPLEMENTATION.md  CONSOLIDATION_REPORT.md  CROSS_PLATFORM_VERIFICATION.md  Cargo.toml  ENTERPRISE_FEATURES.md  OPTIMIZATION_REPORT.md  PROFESSIONAL_FEATURES.md  QUALITY_ASSURANCE_REPORT.md  README.md  WINDOWS_COMPATIBILITY_REPORT.md  logging.toml  logging.yaml
apps/backend/permissions/: Cargo.toml  README.md
apps/backend/rope/: CHANGELOG.md  Cargo.toml  README.md
apps/backend/sample_extension/: readme.md
apps/backend/server/: .env.example  Cargo.toml  README.md
apps/backend/src/: main.rs
apps/backend/terminal/: Cargo.toml  README.md
apps/backend/types/: Cargo.toml  DESIGN.md  README.md
apps/backend/xi-core-reference/: README.md  features.md
apps/backend/xi_integration/: CHANGELOG.md  Cargo.toml  DOCUMENTATION_UPDATE.md  EDITOR_WRAPPER_SUMMARY.md  MIGRATION.md  README.md  REFACTORING_SUMMARY.md  UNDO_REDO_IMPLEMENTATION.md  XI_CORE_API_RESEARCH.md
backend/crosspty/: Cargo.toml
core/: Cargo.toml
core/src/: configuration.rs  server.rs
core/src/handlers/: mod.rs
core_api/: Cargo.toml
core_api/src/extensions/: manager.rs
core_api/tests/: extension_settings.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
extensions/git/: Cargo.toml
extensions/git/src/: lib.rs
extensions/native-shell/: Cargo.toml
extensions/native-shell/src/: lib.rs  native.rs
extensions/typescript-lsp/: Cargo.toml
extensions/typescript-lsp/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
(+865 files in other folders)
