[package]
name = "gveditor-core"
version = "0.1.7"
description = "Symphony Core"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"

[features]
local_client = []
http_client = ["jsonrpc-http-server", "hyper-tungstenite", "url"]

[dependencies]
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["sync", "rt"]}
tracing = "0.1.41"
gveditor-core-api = { version = "0.1.6", path = "../core_api"}
async-trait = "0.1.88"
# http client
jsonrpc-http-server = { version = "18.0.0", optional = true}
hyper-tungstenite = { version = "0.8.2", optional = true}
url = { version = "2.5.4", optional = true}

[dev-dependencies]
tokio-test = "0.4.4"
tokio-tungstenite = "0.17.2"
