[package]
name = "gveditor-core-api"
version = "0.1.7"
description = "Symphony Core API"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"

[dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt", "process", "macros"]}
tokio-stream = { version = "0.1.17", features = ["fs"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
tracing = "0.1.41"
toml = "0.5.11"
uuid = { version = "1.17.0", features = [ "v4"] }
