[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín Sanz"]
readme = "../readme.md"
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features= ["env-filter", "std"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
gveditor-core = { path = "../core", features = ["http_client"]}
gveditor-core-api  = { path = "../core_api"}
git-for-symphony = { path = "../extensions/git"}
