[workspace]
resolver = "2"
members = [
    "crates/core/xi-core-lib",
    "crates/utils/xi-rope",
    "crates/core/xi-rpc",
    "crates/plugins/xi-plugin-lib",
    "crates/core/xi-lsp-lib",
    "crates/utils/xi-unicode",
    "crates/utils/xi-trace",
    "crates/plugins/xi-syntect-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yourusername/symphony"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[workspace.lints.clippy]
needless_return = "allow"

[workspace.lints.rust]
unexpected_cfgs = "warn"

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2


# Symphony main binary
[package]
name = "symphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
xi-core-lib = { path = "crates/core/xi-core-lib" }
xi-rpc = { path = "crates/core/xi-rpc" }
xi-rope = { path = "crates/utils/xi-rope" }

serde.workspace = true
serde_json.workspace = true
log.workspace = true
tokio.workspace = true
anyhow.workspace = true

env_logger = "0.11"

[[bin]]
name = "symphony"
path = "src/main.rs"
