[workspace]
resolver = "2"

members = [
    "crates/core/xi-core-lib",
    "crates/utils/xi-rope",
    "crates/core/xi-rpc",
    "crates/plugins/xi-plugin-lib",
    "crates/core/xi-lsp-lib",
    "crates/utils/xi-unicode",
    "crates/utils/xi-trace",
    "crates/plugins/xi-syntect-plugin",
    "crates/utils/sy-commons",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Symphony Team"]
license = "MIT"
repository = "https://github.com/Symphony-aide/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-aide/Symphony-App/tree/main"

# Workspace metadata
[workspace.metadata]
rust-version = "1.70"

# Workspace lints
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Pedantic lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Performance lints
perf = { level = "warn", priority = -1 }
# Cargo lints
cargo = { level = "warn", priority = -1 }
# Specific denies
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Development profile
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

# Release profile - optimized for performance
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = true

# Release with debug info - for profiling
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Test profile
[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 16

# Size-optimized release profile
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Symphony main binary
[package]
name = "symphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
#xi-core-lib = { path = "crates/core/xi-core-lib" }
#xi-rpc = { path = "crates/core/xi-rpc" }
#xi-rope = { path = "crates/utils/xi-rope" }
#
#serde.workspace = true
#serde_json.workspace = true
#log.workspace = true
#tokio.workspace = true
#anyhow.workspace = true

env_logger = "0.11"


[[bin]]
name = "symphony"
path = "src/main.rs"
