[workspace]
resolver = "2"

members = [
    "crates/core/xi-core-lib",
    "crates/utils/xi-rope",
    "crates/core/xi-rpc",
    "crates/plugins/xi-plugin-lib",
    "crates/core/xi-lsp-lib",
    "crates/utils/xi-unicode",
    "crates/utils/xi-trace",
    "crates/plugins/xi-syntect-plugin",
    "crates/utils/sy-commons",
    "crates/symphony-core-ports",
    "crates/sy-ipc-protocol",
    "crates/sy-ipc-transport",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
rmp-serde = "1.1"

# Logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Filesystem and utilities
directories = "5.0"
tempfile = "3.0"
regex = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing frameworks
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.18"
tokio-test = "0.4"
proptest = "1.0"
serial_test = "3.0"

# Development dependencies (commonly used across sy-* crates)
# These are typically used in [dev-dependencies] sections

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Symphony Team"]
license = "MIT"
repository = "https://github.com/Symphony-aide/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-aide/Symphony-App/tree/main"

# Workspace metadata
[workspace.metadata]
rust-version = "1.70"

# Workspace lints
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
# Pedantic lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Performance lints
perf = { level = "warn", priority = -1 }
# Cargo lints
cargo = { level = "warn", priority = -1 }
# Specific denies
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Development profile
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

# Release profile - optimized for performance
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = true

# Release with debug info - for profiling
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Test profile
[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 16

# Size-optimized release profile
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Symphony main binary
[package]
name = "symphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Symphony AI-First Development Environment (AIDE) - Revolutionary text editor with AI orchestration"
keywords = ["editor", "ide", "ai", "development", "aide"]
categories = ["text-editors", "development-tools", "command-line-utilities"]

[dependencies]
#xi-core-lib = { path = "crates/core/xi-core-lib" }
#xi-rpc = { path = "crates/core/xi-rpc" }
#xi-rope = { path = "crates/utils/xi-rope" }
#
#serde.workspace = true
#serde_json.workspace = true
#log.workspace = true
#tokio.workspace = true
#anyhow.workspace = true

env_logger = "0.11"


[[bin]]
name = "symphony"
path = "src/main.rs"
