[package]
name = "crosspty"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt", "process", "macros"]}
async-trait = "0.1.88"
futures = "0.3.31"

[target.'cfg(windows)'.dependencies]
winpty-rs = "0.3.16"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time", "io-util", "io-std"] }
