[package]
name = "symphony"
version = "0.1.1"
description = "Desktop Code Editor"
authors = ["Marc Espín Sanz"]
license = "MIT"
repository = "https://github.com/Symphony-Code-Editor/Symphony-App"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "1.8.3", features = ["dialog-all", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
gveditor-core = { path = "../../core", features = ["local_client"] }
gveditor-core-api  = { path = "../../core_api"}
# Temporarily disabled due to v8 compilation issues
# gveditor-core-deno = { path = "../../core_deno"}
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features= ["env-filter", "std"] }
git-for-symphony = { path = "../../extensions/git" }
typescript-lsp-symphony = { path = "../../extensions/typescript-lsp" }
native-shell-symphony = { path = "../../extensions/native-shell" }
anyhow = "1.0.98"

[target.'cfg(windows)'.dependencies]
window-shadows = "0.2.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

