[package]
name = "git-for-symphony"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín Sanz"]
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"

[dependencies]
gveditor-core-api  = { path = "../../core_api"}
git2 = "0.13.25"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
