[package]
name = "native-shell-graviton"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín Sanz"]
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
gveditor-core-api  = { path = "../../core_api"}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
crosspty = { path = "../../crosspty"}
