[package]
name = "crosspty"
version = "0.1.0"
edition = "2021"
description = "Cross-platform pseudo-terminal (PTY) abstraction for Symphony"
authors = ["Symphony Team"]
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"
readme = "README.md"
keywords = ["pty", "terminal", "cross-platform", "async"]
categories = ["os", "development-tools"]

[dependencies]
tokio = { version = "1.45.1", features = ["sync", "rt", "process", "macros", "io-util", "io-std", "signal"]}
async-trait = "0.1.88"
futures = "0.3.31"
tracing = "0.1"
thiserror = "1.0"
bytes = "1.5"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "term"] }
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "io-util", "io-std", "macros"] }
tokio-test = "0.4"
