[package]
name = "sylogging"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["sync", "rt"] }
serde_json = "1"
color-eyre = "0.6"
