[package]
name = "sy-ipc-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"

# Workspace dependencies
sy-commons = { path = "../utils/sy-commons" }

# Tokio for async support
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
# Testing tools (following technical patterns)
rstest = "0.18"
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.8.1"

[features]
# Default runs only fast unit tests
default = []
# Individual test category features
unit = []
integration = []
property = []
performance = []
jsonrpc = []
xi_protocol = []

[[bench]]
name = "serialization_bench"
harness = false
required-features = ["performance"]