[package]
name = "sy-ipc-protocol"
version.workspace = true
edition.workspace = true
description = "IPC Message Protocol for Symphony AIDE with multiple serialization formats"
repository.workspace = true
readme = "README.md"
keywords = ["ipc", "protocol", "serialization", "messagepack", "jsonrpc"]
categories = ["network-programming", "encoding", "development-tools"]
license.workspace = true

[lints]
workspace = true

[dependencies]
# Serialization
serde.workspace = true
rmp-serde.workspace = true
bincode.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Workspace dependencies
sy-commons = { path = "../utils/sy-commons" }

# Tokio for async support
tokio.workspace = true

[dev-dependencies]
# Testing tools (following technical patterns)
rstest.workspace = true
tokio-test.workspace = true
proptest.workspace = true
criterion.workspace = true

# MANDATORY for factory-based testing
fake = { version = "2.9", features = ["derive", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
# Default runs only fast unit tests
default = []
# Individual test category features
unit = []
integration = []
property = []
performance = []
jsonrpc = []
xi_protocol = []

[[bench]]
name = "serialization_bench"
harness = false
required-features = ["performance"]

# Unit test targets
[[test]]
name = "jsonrpc_compliance_test"
path = "tests/unit/jsonrpc_compliance_test.rs"
required-features = ["jsonrpc"]

[[test]]
name = "message_envelope_test"
path = "tests/unit/message_envelope_test.rs"
required-features = ["unit"]

[[test]]
name = "serialization_test"
path = "tests/unit/serialization_test.rs"
required-features = ["unit"]

[[test]]
name = "schema_test"
path = "tests/unit/schema_test.rs"
required-features = ["unit"]

[[test]]
name = "xi_protocol_test"
path = "tests/unit/xi_protocol_test.rs"
required-features = ["xi_protocol"]

[[test]]
name = "jsonrpc_client_test"
path = "tests/unit/jsonrpc_client_test.rs"
required-features = ["jsonrpc"]

[[test]]
name = "registry_test"
path = "tests/unit/registry_test.rs"
required-features = ["unit"]

[[test]]
name = "serializer_test"
path = "tests/unit/serializer_test.rs"
required-features = ["unit"]