[package]
name = "symphony-core-ports"
version.workspace = true
edition.workspace = true
description = "Core port trait definitions for Symphony's H2A2 architecture"
authors = ["Symphony Team"]
license.workspace = true
repository.workspace = true

[dependencies]
# Async trait support
async-trait.workspace = true

# Serialization framework
serde.workspace = true

# Unique identifier generation
uuid.workspace = true

# Error handling
thiserror.workspace = true

# Symphony commons foundation
sy-commons = { path = "../utils/sy-commons" }

# Async runtime for streams
tokio.workspace = true

# Path handling
camino.workspace = true

# Time handling
chrono.workspace = true

# JSON handling
serde_json.workspace = true

[dev-dependencies]
# MANDATORY for factory-based testing
fake.workspace = true

# Testing framework
rstest.workspace = true
tokio-test.workspace = true
proptest.workspace = true

[features]
# Default runs only fast unit tests
default = []

# Individual test category features
unit = []
integration = []
mock = []
performance = []
serialization = []
error_handling = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]