[package]
name = "symphony"
version = "0.1.1"
description = "Desktop Editor"
authors = ["Symphony Team"]
license = "MIT"
repository = "https://github.com/Symphony-aide/Symphony"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "1.8.3", features = ["dialog-all", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
sveditor-core = { path = "../../core", features = ["local_client"] }
sveditor-core-api  = { path = "../../core_api"}
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features= ["env-filter", "std"] }
git-for-symphony = { path = "../../developed_extensions/git" }
typescript-lsp-symphony = { path = "../../developed_extensions/typescript-lsp" }
native-shell-symphony = { path = "../../developed_extensions/native-shell" }
anyhow = "1.0.98"

[target.'cfg(windows)'.dependencies]
window-shadows = "0.2.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

