[package]
name = "lsp-manager-symphony"
version = "0.1.0"
edition = "2021"
authors = ["Symphony Team"]
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"
description = "Multi-language LSP manager extension for Symphony IDE"
readme = "README.md"
keywords = ["lsp", "language-server", "symphony", "extension"]
categories = ["development-tools"]

[dependencies]
sveditor-core-api = { path = "../../core_api" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1.41"
async-trait = "0.1.88"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.10.1"
