[package]
name = "typescript-lsp-symphony"
version = "0.1.0"
edition = "2021"
authors = ["Symphony Team"]
repository = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
homepage = "https://github.com/Symphony-Code-Editor/Symphony-App/tree/main"
license = "MIT"

[dependencies]
sveditor-core-api  = { path = "../../core_api"}
interactive_process = "0.1.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
snailquote = "0.3.1"
bytes = "1.10.1"
tracing = "0.1.41"
async-trait = "0.1.88"
