[package]
name = "symphony-ipc-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Message envelope design for Symphony's IPC communication system"

[dependencies]
# UUID generation
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"

# DateTime handling
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Test utilities
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "message_benchmarks"
harness = false

[features]
default = []