[package]
name = "xi-core-lib"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Library module for xi-core"
repository = "https://github.com/google/xi-editor"
edition = '2021'

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
toml = "0.8"
notify = { optional = true, version = "6.1" }
regex = "1.0"
memchr = "2.7"
crossbeam-channel = "0.5"

xi-trace = { path = "../../utils/xi-trace", version = "0.2.0" }
xi-rope = { path = "../../utils/xi-rope", version = "0.3", features = ["serde"] }
xi-unicode = { path = "../../utils/xi-unicode", version = "0.3.0" }
xi-rpc = { path = "../../core/xi-rpc", version = "0.3.0" }

[dependencies.syntect]
version = "5.2"
default-features = false
features = ["default-fancy"]

[target."cfg(target_os = \"fuchsia\")".dependencies]
sha2 = "0.10"
# Note: these can be available if needed, but the idea is that the
# platform-specific code moves entirely to the binary wrapper that
# includes xi-core-lib.
#fuchsia-zircon = "0.3"
#fuchsia-zircon-sys = "0.3"
#mxruntime = "0.1.0"
#fidl = "0.1.0"

[dev-dependencies]
tempfile = "3.10"

[features]
ledger = []
default = []
