[package]
name = "xi-plugin-lib"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "The library base for implementing xi-editor plugins."
edition = '2021'

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytecount = "0.5"
rand = "0.6"
memchr = "2.0"
log = "0.4.3"

[dependencies.xi-trace]
path = "../../utils/xi-trace"

[dependencies.xi-rpc]
path = "../../core/xi-rpc"

[dependencies.xi-core-lib]
path = "../../core/xi-core-lib"

[dependencies.xi-rope]
path = "../../utils/xi-rope"
