[package]
name = "xi-syntect-plugin"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "A syntax highlighting plugin based on syntect."
edition = '2021'

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
toml = "0.5"

[dependencies.syntect]
version = "5.3"
default-features = false
features = ["parsing", "yaml-load", "default-syntaxes", "default-themes"]

[dependencies.xi-plugin-lib]
path = "../../plugins/xi-plugin-lib"

[dependencies.xi-core-lib]
path = "../../core/xi-core-lib"

[dependencies.xi-rope]
path = "../../utils/xi-rope"

[dependencies.xi-trace]
path = "../../utils/xi-trace"
